# simple_lines

./: .gitignore  Cargo.toml  README.md  devto.md
benches/: bufread_lines.rs  read_lines.rs
src/: bound.rs  lib.rs
